# eth-amm

./: .gitignore  Cargo.toml  foundry.toml  simulations.csv
src/: arithmetic.rs  concurrent.rs  eth_provider.rs  filters.rs  lib.rs  main.rs  middleware.rs  pair_paths.rs  simulator.rs
src/address_book/: address_book.yaml  mod.rs
src/amm/: mod.rs  weth_value.rs
src/amm/uniswap_v2/: factory.rs  mod.rs  pool.rs
src/amm/uniswap_v2/batch_request/: mod.rs
src/amm/uniswap_v2/factory/: contracts.rs  factory.rs  mod.rs  pair_addresses_batch_request.rs  pair_created_event.rs  tests.rs
src/amm/uniswap_v2/factory/events/: mod.rs  pair_created.rs
src/amm/uniswap_v2/pool/: contracts.rs  mod.rs  pool_data_batch_request.rs  sync_event.rs  tests.rs
src/amm/uniswap_v2/pool/events/: sync.rs
src/checkpoint/: mod.rs
src/contract/: GetUniswapV2PairsBatchRequest.sol  GetUniswapV2PoolDataBatchRequest.sol  GetWethValueInPoolBatchRequest.sol  SimulatorV1.sol  mod.rs
src/contract/protocols/: UniswapV2Library.sol
src/contract/protocols/utils/: SafeMath.sol
src/path/: mod.rs  optimal_amount.rs  path_discovery.rs  simulator.rs
src/tests/: fixtures.rs
