[package]
name = "eth-amm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.8", default-features = true, features = ["abigen", "ws", "ipc", "rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
eyre = "0.6.8"
serde_json = "1.0.104"
serde = "1.0.176"
indicatif = "0.17.5"
futures = "0.3.28"
num-bigfloat = "1.6.2"
itertools = "0.10.0" 
rand = "0.8.5"
maplit = "1.0.2"
serde_yaml = "0.8"
csv = "1.1"
